--- a/src/input.css
+++ b/src/input.css
@@ -6,6 +6,11 @@
     @apply bg-gradient-to-r from-purple-500 to-blue-500;
     @apply text-white
   }
+
+  .quizBackGround{
+   @apply bg-gradient-to-br from-purple-900 via-blue-900 to-blue-950;
+   @apply text-white;
+  }
 }
 
 
