--- a/publicFolder/styles.css
+++ b/publicFolder/styles.css
@@ -19,6 +19,8 @@
     --text-base--line-height: calc(1.5 / 1);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
+    --text-5xl: 3rem;
+    --text-5xl--line-height: 1;
     --font-weight-bold: 700;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
@@ -173,11 +175,8 @@
   .fixed {
     position: fixed;
   }
-  .top-\[0\] {
-    top: 0;
-  }
-  .top-\[50px\] {
-    top: 50px;
+  .top-0 {
+    top: calc(var(--spacing) * 0);
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -187,12 +186,6 @@
   }
   .m-2 {
     margin: calc(var(--spacing) * 2);
-  }
-  .m-4 {
-    margin: calc(var(--spacing) * 4);
-  }
-  .mt-\[60px\] {
-    margin-top: 60px;
   }
   .mt-\[120px\] {
     margin-top: 120px;
@@ -206,53 +199,14 @@
   .table {
     display: table;
   }
-  .h-3 {
-    height: calc(var(--spacing) * 3);
-  }
-  .h-10 {
-    height: calc(var(--spacing) * 10);
-  }
-  .h-\[0px\] {
-    height: 0px;
-  }
-  .h-\[50px\] {
-    height: 50px;
-  }
-  .h-\[60px\] {
-    height: 60px;
-  }
   .h-\[100px\] {
     height: 100px;
-  }
-  .h-\[120px\] {
-    height: 120px;
-  }
-  .h-\[200px\] {
-    height: 200px;
-  }
-  .h-\[300px\] {
-    height: 300px;
-  }
-  .h-auto {
-    height: auto;
-  }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
-  .w-\[3px\] {
-    width: 3px;
-  }
-  .w-\[50px\] {
-    width: 50px;
   }
   .w-\[100px\] {
     width: 100px;
   }
-  .w-\[300px\] {
-    width: 300px;
-  }
-  .flex-1 {
-    flex: 1;
+  .flex-4 {
+    flex: 4;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -266,14 +220,11 @@
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-  .grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .flex-col {
+    flex-direction: column;
   }
   .flex-row {
     flex-direction: row;
-  }
-  .items-baseline-last {
-    align-items: last baseline;
   }
   .items-center {
     align-items: center;
@@ -284,8 +235,8 @@
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
-  .gap-6 {
-    gap: calc(var(--spacing) * 6);
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
   }
   .border {
     border-style: var(--tw-border-style);
@@ -300,24 +251,28 @@
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
-  .pt-\[120px\] {
-    padding-top: 120px;
+  .p-5 {
+    padding: calc(var(--spacing) * 5);
   }
-  .pt-\[150px\] {
-    padding-top: 150px;
+  .p-8 {
+    padding: calc(var(--spacing) * 8);
   }
-  .align-middle {
-    vertical-align: middle;
+  .p-10 {
+    padding: calc(var(--spacing) * 10);
   }
-  .font-mono {
-    font-family: var(--font-mono);
+  .pr-\[50px\] {
+    padding-right: 50px;
   }
-  .font-sans {
-    font-family: var(--font-sans);
+  .pl-\[50px\] {
+    padding-left: 50px;
   }
   .text-3xl {
     font-size: var(--text-3xl);
     line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
+  .text-5xl {
+    font-size: var(--text-5xl);
+    line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
   .text-base {
     font-size: var(--text-base);
@@ -336,6 +291,11 @@
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
+  }
+  .sm\:grid-cols-3 {
+    @media (width >= 40rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+    }
   }
 }
 @layer components {
@@ -359,6 +319,17 @@
     --tw-gradient-to: var(--color-blue-950);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
     color: var(--color-white);
+  }
+  .quizContainer {
+    min-height: 140px;
+    border-radius: 10px;
+    background-color: var(--color-blue-300);
+    @media (width >= 40rem) {
+      min-height: 180px;
+    }
+    @media (width >= 64rem) {
+      min-height: 300px;
+    }
   }
 }
 @layer base;
