--- a/src/input.css
+++ b/src/input.css
@@ -37,13 +37,13 @@
 
 
   .ansButton {
-  @apply px-5 py-2 sm:px-15 sm:py-7 bg-blue-900 font-bold rounded-[5px] cursor-pointer;
+  @apply px-5 py-2 sm:px-5 sm:py-5 bg-blue-900 font-bold rounded-[5px] cursor-pointer text-[15px];
   @apply hover:bg-blue-200 transition duration-500;
 }
 
 
 .mainQuestionContainer{
-  @apply w-[300px] h-[300px] sm:w-[500px] sm:h-[500px] bg-blue-950 rounded-2xl flex flex-col gap-2 items-center relative;
+  @apply w-[400px] h-[400px] sm:w-[600px] sm:h-[600px] bg-blue-950 rounded-2xl flex flex-col gap-1 items-center relative;
 }
 
 .QuizTitleContainer{
