--- a/src/input.css
+++ b/src/input.css
@@ -51,7 +51,8 @@
 }
 
 .ManagerContainer{
-  @apply bg-blue-500 p-4 flex flex-row items-center mx-0.5 gap-2 rounded-2xl font-bold text-[10px] 
+  @apply bg-blue-500 p-4 flex flex-row items-center mx-0.5 gap-2 rounded-2xl font-bold text-[10px];
+  @apply sm:text-3xl sm:p-10
 }
 
 }
