--- a/src/input.css
+++ b/src/input.css
@@ -64,7 +64,9 @@
   @apply p-4 bg-gray-200 rounded-2xl cursor-pointer hover:bg-gray-500 transition duration-300
 }
 }
-
+.inputChoice{
+  @apply bg-white text-black p-1.5 sm:p-2.5;
+}
 
 @layer base{
     /* body {
